Add JPMS setings for ITs too (maven-failsafe-plugin)